github linked solved

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about-me">ABOUT ME</a></li>
                 <li><a href="#contact">CONTACT</a></li>
-                <li><a href="#"><img src="img/github.png" alt="github's logo"></a></li>
+                <li><a href="https://github.com/NBalboa"><img src="img/github.png" alt="github's logo"></a></li>
             </ul>
         </div>
     </header>
